@startuml

!theme sunlust
skinparam dpi 300
top to bottom direction
skinparam backgroundColor transparent
skinparam actorStyle awesome
skinparam shadowing false
skinparam ranksep 40

skinparam class {
  backgroundColor #E6F3FF
  borderColor #3995D7
}

' =======================================
' Definizione delle Classi
' =======================================

class User {
  fullName: String
  preferredRole: ContestRole
}

class Message {
  title: String
  body: String
  isRead: Boolean
}

class Contest {
  name: String
  description: String
  date: DateTime
  submissionStartDate: DateTime
  submissionEndDate: DateTime
  imagesPaths: String[1..*]
}

class Place {
  address: String
  latitude: Float
  longitude: Float
}

class Work {
  name: String
  description: String
  imagesPaths: String[1..*]
  filePath: String
}

class Jury {
  name: String
  type: JuryType
  token: String ' For simple juries
}

class VotingForm {
  name: String
  description: String
}

class VotingFormField {
  question: String
  order: Int
  type: VotingFormFieldType
  scope: VotingFormFieldScope
  isRequired: Boolean
}

class VotingSession {
  name: String
  isGeoRestricted: Boolean
  status: VotingSessionStatus
}

class ContestRanking {
  filePath: String
}

class VotingSubmission {
  submittedAt: DateTime
}

class VotingSubmissionValue {
  value: String
}

' --- Classi di Associazione e Invito ---
class ParticipantMembership {
  hasSubmitted: Boolean
}

class JurorMembership {
}

class ParticipantInvitation {
  email: String
  token: String
}

class JurorInvitation {
  email: String
  token: String
}

' --- Nota Esplicativa per la logica dello Scope ---
note "L'attributo 'scope' determina come il campo viene renderizzato:\n- **Header**: Visualizzato una volta all'inizio del form.\n- **Participant**: Ripetuto per ogni partecipante da valutare.\n- **Footer**: Visualizzato una volta alla fine del form." as NOTE_VotingFormField
NOTE_VotingFormField .- VotingFormField

' =======================================
' Definizione delle Relazioni
' =======================================

' --- Relazioni Principali ---
User "1" -r- "*" Message : riceve\n
User "1" -- "*" Contest : organizza

' MODIFICA: Usata la composizione
Contest "1" *-- "0..1" Place : si_svolge_a
Contest "1" *-- "*" Jury : ha
Contest "1" -- "*" ContestRanking : produce
Contest "1" -- "*" VotingSession : contiene

' --- Relazioni per Inviti ---
Contest "1" -- "*" ParticipantInvitation : invia
Jury "1" -- "*" JurorInvitation : invia
ParticipantInvitation ..> ParticipantMembership : crea
JurorInvitation ..> JurorMembership : crea

' --- Relazioni per le Classi di Associazione ---
(User, Contest) .. ParticipantMembership
(User, Jury) .. JurorMembership

' MODIFICA: Usata la composizione
ParticipantMembership "1" *-r- "0..1" Work : sottomette\n

' --- Relazioni per il Processo di Voto ---
Jury "1\n" -- "1\n" VotingForm : usa
VotingForm "1" *-- "*" VotingFormField : contiene

VotingSession "0..1" -- "0..1" Place : ristretta_a

' --- Relazioni Molti-a-Molti per le Sessioni ---
VotingSession "*" -- "1..*" JurorMembership : include
VotingSession "*" -- "1..*" ParticipantMembership : valuta

' --- Relazioni per la Sottomissione dei Voti ---
JurorMembership "1" -- "1" VotingSubmission : sottomette
' MODIFICA: Usata la composizione
VotingSubmission "1" *-- "*" VotingSubmissionValue : consiste_di
VotingSubmissionValue "1" -- "1" VotingFormField : risponde_a
VotingSubmissionValue "*" -- "0..1" ParticipantMembership : valuta

@enduml